Revert "correct welcome container overlapping footer"
This reverts commit f0bc09f02fbf59a0f5dcced1859b95999f5469b2.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,6 @@ html {
     width: 100%;
 }
 
-#index-html {
-    height:unset;
-}
-
 /* Center all content within the main semantic markup */
 main {
     display: flex;
